brought publication bibtex current

--- a/publications.bib
+++ b/publications.bib
@@ -1,67 +1,216 @@
-@Article{refsearch,
-    Author="\textbf{Tastad, C. T.} and Verma, M.",
-    Title="{{R}ef{S}earch: A tool to more accurately identify normalization candidates for {RNA}seq analysis}",
-    Journal="Manuscript in preparation",
-    Year="2019",
-    Volume="",
-    Number="",
-    Pages=""
+@article{hirai2010myod,
+  title={MyoD regulates apoptosis of myoblasts through microRNA-mediated down-regulation of Pax3},
+  author={Hirai, Hiroyuki and Verma, Mayank and Watanabe, Shuichi and Tastad, Christopher and Asakura, Yoko and Asakura, Atsushi},
+  journal={Journal of Cell Biology},
+  volume={191},
+  number={2},
+  pages={347--365},
+  year={2010},
+  publisher={The Rockefeller University Press}
 }
 
-@Article{pmid22848585,
-   Author="Nakamura, Y.  and Asakura, Y.  and Piras, B. A.  and Hirai, H.  and \textbf{Tastad, C. T.}  and Verma, M.  and Christ, A. J.  and Zhang, J.  and Yamazaki, T.  and Yoshiyama, M.  and Asakura, A. ",
-   Title="{{I}ncreased angiogenesis and improved left ventricular function after transplantation of myoblasts lacking the {M}yo{D} gene into infarcted myocardium}",
-   Journal="PLoS ONE",
-   Year="2012",
-   Volume="7",
-   Number="7",
-   Pages="e41736"
+@article{watanabe2011myod,
+  title={MyoD gene suppression by Oct4 is required for reprogramming in myoblasts to produce induced pluripotent stem cells},
+  author={Watanabe, Shuichi and Hirai, Hiroyuki and Asakura, Yoko and Tastad, Christopher and Verma, Mayank and Keller, Charles and Dutton, James R and Asakura, Atsushi},
+  journal={Stem cells},
+  volume={29},
+  number={3},
+  pages={505--516},
+  year={2011},
+  publisher={Oxford University Press}
 }
 
-% 21425413 
-@Article{pmid21425413,
-   Author="Watanabe, S.  and Hirai, H.  and Asakura, Y.  and \textbf{Tastad, C}.  and Verma, M.  and Keller, C.  and Dutton, J. R.  and Asakura, A. ",
-   Title="{{M}yo{D} gene suppression by {O}ct4 is required for reprogramming in myoblasts to produce induced pluripotent stem cells}",
-   Journal="Stem Cells",
-   Year="2011",
-   Volume="29",
-   Number="3",
-   Pages="505--516",
-   Month="Mar"
+@article{verma2010flt,
+  title={Flt-1 haploinsufficiency ameliorates muscular dystrophy phenotype by developmentally increased vasculature in mdx mice},
+  author={Verma, Mayank and Asakura, Yoko and Hirai, Hiroyuki and Watanabe, Shuichi and Tastad, Christopher and Fong, Guo-Hua and Ema, Masatsugu and Call, Jarrod A and Lowe, Dawn A and Asakura, Atsushi},
+  journal={Human molecular genetics},
+  volume={19},
+  number={21},
+  pages={4145--4159},
+  year={2010},
+  publisher={Oxford University Press}
 }
 
-% 20956382 
-@Article{pmid20956382,
-   Author="Hirai, H.  and Verma, M.  and Watanabe, S.  and \textbf{Tastad, C}.  and Asakura, Y.  and Asakura, A. ",
-   Title="{{M}yo{D} regulates apoptosis of myoblasts through micro{R}{N}{A}-mediated down-regulation of {P}ax3}",
-   Journal="J. Cell Biol.",
-   Year="2010",
-   Volume="191",
-   Number="2",
-   Pages="347--365",
-   Month="Oct"
+@article{nakamura2012increased,
+  title={Increased angiogenesis and improved left ventricular function after transplantation of myoblasts lacking the MyoD gene into infarcted myocardium},
+  author={Nakamura, Yasuhiro and Asakura, Yoko and Piras, Bryan A and Hirai, Hiroyuki and Tastad, Christopher T and Verma, Mayank and Christ, Amanda J and Zhang, Jianyi and Yamazaki, Takanori and Yoshiyama, Minoru and others},
+  journal={PLoS One},
+  volume={7},
+  number={7},
+  pages={e41736},
+  year={2012},
+  publisher={Public Library of Science}
 }
 
-% 20705734 
-@Article{pmid20705734,
-   Author="Verma, M.  and Asakura, Y.  and Hirai, H.  and Watanabe, S.  and \textbf{Tastad, C}.  and Fong, G. H.  and Ema, M.  and Call, J. A.  and Lowe, D. A.  and Asakura, A. ",
-   Title="{{F}lt-1 haploinsufficiency ameliorates muscular dystrophy phenotype by developmentally increased vasculature in mdx mice}",
-   Journal="Hum. Mol. Genet.",
-   Year="2010",
-   Volume="19",
-   Number="21",
-   Pages="4145--4159",
-   Month="Nov"
+@article{talukdar2020abstract,
+  title={Abstract PO-013: Defining immune infiltrate heterogeneity and its role in ovarian cancer chemotherapy resistance using single cell RNA sequencing},
+  author={Talukdar, Shobhana and Cepela, Jason and Chang, Zenas and Shetty, Mihir and Zhang, Ying and Macchietto, Marissa and Henzler, Christine and Munro, Sarah A and Tastad, Christopher and Grad, Aaron and others},
+  journal={Cancer Research},
+  volume={80},
+  number={21\_Supplement},
+  pages={PO--013},
+  year={2020},
+  publisher={The American Association for Cancer Research}
 }
 
-article{Xarticle,
-    author    = "",
-    title     = "",
-    journal   = "",
-    %volume   = "",
-    %number   = "",
-    %pages    = "",
-    year      = "XXXX",
-    %month    = "",
-    %note     = "",
+@inproceedings{talukdar2020defining,
+  title={Defining immune infiltrate heterogeneity and its role in ovarian cancer chemotherapy resistance using single cell RNA sequencing.},
+  author={Talukdar, Shobhana and Cepela, Jason and Chang, Zenas and Shetty, Mihir and Zhang, Ying and Macchietto, Marissa and Henzler, Christine and Munro, Sarah A and Tastad, Christopher and Grad, Aaron and others},
+  booktitle={CANCER RESEARCH},
+  volume={80},
+  number={21},
+  year={2020},
+  organization={AMER ASSOC CANCER RESEARCH 615 CHESTNUT ST, 17TH FLOOR, PHILADELPHIA, PA~…}
+}
+
+@article{starr2021chemotherapy,
+  title={Chemotherapy resistance pathways identified in ovarian cancer patients treated with neoadjuvant chemotherapy using single cell RNA sequencing of matched tumor biopsies},
+  author={Starr, Timothy K and Talukdar, Shobhana and Chang, Zenas and Cepela, Jason and Tastad, Christopher and Shetty, Mihir and Schneider, Isaac and Woo, Jun and Macchietto, Marissa and Henzler, Christine and others},
+  journal={Cancer Research},
+  volume={81},
+  number={13\_Supplement},
+  pages={1410--1410},
+  year={2021},
+  publisher={The American Association for Cancer Research}
+}
+
+@article{hernandez2025after,
+  title={After surgically induced remission, ileal and colonic mucosa-associated microbiota predicts Crohn’s disease recurrence},
+  author={Hern{\'a}ndez-Rocha, Cristian and Turpin, Williams and Borowski, Krzysztof and Stempak, Joanne M and Sabic, Ksenija and Gettler, Kyle and Tastad, Christopher and Chasteau, Colleen and Korie, Ujunwa and Hanna, Mary and others},
+  journal={Clinical Gastroenterology and Hepatology},
+  volume={23},
+  number={4},
+  pages={612--620},
+  year={2025},
+  publisher={Elsevier}
+}
+
+@article{ibing2025disease,
+  title={Disease duration impacts intestinal gene expression profiles in Crohn’s disease but not in ulcerative colitis},
+  author={Ibing, Susanne and Tastad, Christopher and Renard, Bernhard Y and Cohen, Louis J and Argmann, Carmen and Helmus, Drew and Schadt, Eric E and Merad, Miriam and Kukreja, Anjli and Visvanathan, Sudha and others},
+  journal={Journal of Crohn’s and Colitis},
+  volume={19},
+  number={10},
+  pages={jjaf179},
+  year={2025},
+  publisher={Oxford University Press}
+}
+
+@article{levantovsky2024multimodal,
+  title={Multimodal single-cell analyses reveal mechanisms of perianal fistula in diverse patients with Crohn’s disease},
+  author={Levantovsky, Rachel M and Tastad, Christopher and Zhang, Jiayu and Gettler, Kyle and Sabic, Ksenija and Werner, Robert and Chasteau, Colleen and Korie, Ujunwa and Paguay, Diana and Bao, Michelle and others},
+  journal={Med},
+  volume={5},
+  number={8},
+  pages={886--908},
+  year={2024},
+  publisher={Elsevier}
+}
+
+@article{verma2011efficient,
+  title={Efficient single muscle fiber isolation from alcohol-fixed adult muscle following $\beta$-galactosidase staining for satellite cell detection},
+  author={Verma, Mayank and Asakura, Atsushi},
+  journal={Journal of Histochemistry \& Cytochemistry},
+  volume={59},
+  number={1},
+  pages={60--67},
+  year={2011},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{gettler2025postoperative,
+  title={Postoperative Ileum Transcriptomics Implicate Sex-Biased Mechanisms in Crohn’s Disease Recurrence},
+  author={Gettler, Kyle and Nagpal, Sini and Washburn, Savannah and Tastad, Christopher and Zhang, Jiayu and Sabic, Ksenija and Lazarev, Mark and Bitton, Alain and Cohen, Rita and Schwartz, Marc B and others},
+  journal={Gastroenterology},
+  year={2025},
+  publisher={Elsevier}
+}
+
+@article{han2025356,
+  title={356: A PILOT PERTURB-SEQ OF CROHN’S DISEASE RISK GENES IN PRIMARY HUMAN MONOCYTES},
+  author={Han, Huajun and Bao, Michelle and Tastad, Christopher and Tavares, Lorena and Cho, Judy H},
+  journal={Gastroenterology},
+  volume={169},
+  number={1},
+  pages={S--97},
+  year={2025},
+  publisher={Elsevier}
+}
+
+@article{levantovsky2023253a,
+  title={253a MULTIMODAL SINGLE CELL ANALYSES REVEAL PATHOGENIC FIBROBLASTS IN PERIANAL FISTULA},
+  author={Levantovsky, Rachel and Tastad, Christopher and Zhang, Jiayu and Sabic, Ksenija and Chasteau, Colleen and Korie, Ujunwa and Maskey, Neha and Chuang, Ling-shiang F and Cho, Judy H},
+  journal={Gastroenterology},
+  volume={164},
+  number={6},
+  pages={S--1567},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@article{ibing2024tu1770,
+  title={Tu1770 DISEASE DURATION IMPACTS INTESTINAL GENE EXPRESSION PROFILES IN CROHN'S DISEASE BUT NOT IN ULCERATIVE COLITIS},
+  author={Ibing, Susanne and Tastad, Christopher and Renard, Bernhard Y and Argmann, Carmen A and Sands, Bruce E and Dubinsky, Marla C and Suarez-Farinas, Mayte and Colombel, Jean Frederic and Bottinger, Erwin P and Cho, Judy H and others},
+  journal={Gastroenterology},
+  volume={166},
+  number={5},
+  pages={S--1414},
+  year={2024},
+  publisher={Elsevier}
+}
+
+@article{hsu2023nox1,
+  title={NOX1 is essential for TNF$\alpha$-induced intestinal epithelial ROS secretion and inhibits M cell signatures},
+  author={Hsu, Nai-Yun and Nayar, Shikha and Gettler, Kyle and Talware, Sayali and Giri, Mamta and Alter, Isaac and Argmann, Carmen and Sabic, Ksenija and Thin, Tin Htwe and Ko, Huai-Bin Mabel and others},
+  journal={Gut},
+  volume={72},
+  number={4},
+  pages={654--662},
+  year={2023},
+  publisher={BMJ Publishing Group}
+}
+
+@article{guisado2024reparative,
+  title={The reparative immunologic consequences of stem cell transplantation as a cellular therapy for refractory Crohn’s disease},
+  author={Guisado, Daniela and Talware, Sayali and Wang, Xiaoli and Davis, Andrew and Fozilov, Elbek and Etra, Aaron and Colombel, Jean-Frederic and Schaniel, Christoph and Tastad, Christopher and Levine, John E and others},
+  journal={bioRxiv},
+  pages={2024--05},
+  year={2024},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{herb20241183,
+  title={1183 SINGLE-CELL ANALYSIS OF PATIENT LIVER TISSUE CHARACTERIZES AN ALTERED CELLULAR LANDSCAPE IN PRIMARY SCLEROSING CHOLANGITIS (PSC) AND IDENTIFIES INTERCELLULAR COMMUNICATION NETWORKS ACTIVE IN THE PSC LIVER},
+  author={Herb, Jake and Sabic, Ksenija and Zhang, Jiayu and Tastad, Christopher and Cho, Judy H},
+  journal={Gastroenterology},
+  volume={166},
+  number={5},
+  pages={S--1568},
+  year={2024},
+  publisher={Elsevier}
+}
+
+@article{guisado2025reparative,
+  title={Reparative immunological consequences of stem cell transplantation as a cellular therapy for refractory Crohn’s disease},
+  author={Guisado, Daniela and Talware, Sayali and Wang, Xiaoli and Davis, Andrew and Fozilov, Elbek and Etra, Aaron and Colombel, Jean-Frederic and Schaniel, Christoph and Tastad, Christopher and Levine, John E and others},
+  journal={Gut},
+  volume={74},
+  number={6},
+  pages={894--905},
+  year={2025},
+  publisher={BMJ Publishing Group}
+}
+
+@article{asakura2012skeletal,
+  title={Skeletal muscle-derived hematopoietic stem cells: muscular dystrophy therapy by bone marrow transplantation},
+  author={Asakura, Atsushi},
+  journal={Journal of stem cell research \& therapy},
+  pages={005},
+  year={2012}
+}
+
+@article{motohashi2012stem,
+  title={Stem Cell},
+  author={Motohashi, Norio and Asakura, Atsushi},
+  year={2012}
 }
